--- a/style.css
+++ b/style.css
@@ -1,13 +1,32 @@
 body {
     display: flex;
+}
 
+#img-block{
+    width: 50vw;
+    
+}
+
+#info-block {
+    width: 50vw;
+}
+
+#background {
+    background-image: url("images/landscape.jpg");
+    background-color: orange;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 #banner {
     position: absolute;
-    top: 40px; ;
-    background-color: grey;
-    width: 100em;
+    left: 0em;
+    top: 10em;
+    background-color: rgb(0, 0 , 0, 0.3);
+    width: max(50vw);
 }
 
 h1 {
@@ -15,4 +34,5 @@ h1 {
     font-size: 4rem;
     font-style:normal;
     font-weight: 400;
+    
 }
