--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    margin: 0em;
 }
 
 #img-block{
@@ -21,12 +22,20 @@ body {
     
 }
 
+
 #banner {
+    display: flex;
     position: absolute;
     left: 0em;
     top: 10em;
     background-color: rgb(0, 0 , 0, 0.3);
     width: max(50vw);
+    justify-content: center;
+    align-items: center;
+}
+
+#logo {
+    max-height: 8vh;
 }
 
 h1 {
@@ -35,4 +44,10 @@ h1 {
     font-style:normal;
     font-weight: 400;
     
+}
+
+#form-bar {
+    background-color: lightgrey;
+    margin-top:1em;
+    margin-bottom: 1em;
 }
